tests/fixtures/invalid/modules_private/main.lby
import geometry

fn main -> i64
    priv_helper(5)
